// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelperErrorText Renders the UI snapshot correctly 1`] = `
<div
  aria-atomic={true}
  aria-live="off"
  className="css-1xdhyk6"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Text",
    }
  }
  data-isinvalid={false}
  id="basic"
/>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 2`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Text",
    }
  }
  data-isinvalid={true}
  id="invalid"
/>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 3`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  dangerouslySetInnerHTML={
    Object {
      "__html": "This helper text <b>contains HTML in the string</b>.",
    }
  }
  data-isinvalid={true}
  id="invalid"
/>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 4`] = `
<div
  aria-atomic={true}
  aria-live="polite"
  className="css-1xdhyk6"
  data-isinvalid={true}
  id="invalid"
>
  This helper text 
  <b>
    contains HTML
  </b>
  .
</div>
`;
